Finished the two helper activities that would help the user select the appliance

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".camera.ExternalApplication"></activity>
         <activity android:name="UserApplianceSelectionActivity"></activity>
+        <activity android:name="DefaultSelectionActivity"></activity>
     </application>
 
 </manifest>
