--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-8
-android.library.reference.1=../../../Documents/Software/OPENCV4ADROID243/OpenCV-2.4.3.2-android-sdk/sdk/java
+target=android-15
+android.library.reference.1=../../Software/OpenCV4Android/sdk/java
